# triple_pendulum_description

./: .gitignore  CMakeLists.txt  package.xml
config/: controller.yaml
launch/: measure_response_gazebo.launch.py  view_robot.launch.py  view_robot_gazebo.launch.py
rviz/: view_robot.rviz
urdf/: material.xacro  model.urdf  model.urdf.xacro  triple_pendulum.xacro  triple_pendulum_control.xacro
